Running with correct VM options